tests/ui/coercion/retslot-cast.stderr
error[E0308]: mismatched types
  --> $DIR/retslot-cast.rs:13:5
   |
LL |             -> Option<&Iterator<Item=()>> {
   |                -------------------------- expected `Option<&dyn Iterator<Item = ()>>` because of return type
...
LL |     inner(x)
   |     ^^^^^^^^ expected trait `Iterator<Item = ()>`, found trait `Iterator<Item = ()> + Send`
...
LL |              -> Option<&(Iterator<Item=()>+Send)> {
   |                 --------------------------------- help: consider changing inner's return type: `Option<&dyn Iterator<Item = ()>>`
   |
   = note: expected enum `Option<&dyn Iterator<Item = ()>>`
              found enum `Option<&dyn Iterator<Item = ()> + Send>`
note: the function inner is defined here
  --> $DIR/retslot-cast.rs:16:1
   |
LL | / pub fn inner(x: Option<&(Iterator<Item=()>+Send)>)
LL | |              -> Option<&(Iterator<Item=()>+Send)> {
   | |_________________________________________________^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
